--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.0",
+    "@google/genai": "^0.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
